# bmp_image_processor

./: .gitattributes  CMakeLists.txt  image_processor.cpp  image_processor.h  test.cpp
catch/: catch.hpp
cmake/: AddCatch2.cmake
exceptions/: exceptions.h
filters/: filter.cpp  filter.h  utils.h
image/: color.cpp  color.h  image.cpp  image.h  pixel.cpp  pixel.h
input_output/: CMakeLists.txt  bmp24.cpp  bmp24.h  bmp24_reader.cpp  bmp24_reader.h  bmp24_writer.cpp  bmp24_writer.h  reader.cpp  reader.h  utils.h  writer.cpp  writer.h
main/: image_processor.h
parser/: parser.cpp  parser.h
src/: CMakeLists.txt
src/filters/: CMakeLists.txt  filter.cpp  filter.h  utils.h
src/image/: CMakeLists.txt  image.cpp  image.h  pixel.cpp  pixel.h
src/input_output/: CMakeLists.txt  bmp24.cpp  bmp24.h  bmp24_reader.h  bmp24_writer.h  utils.h
src/main/: image_processor.h
src/parser/: CMakeLists.txt  parser.cpp
test_script/: CMakeLists.txt  tests.cpp
unit_tests/: CMakeLists.txt  test_helper.cpp  test_helper.h  tests.cpp  utils.h
